Fix contrast for failed message on sync page in dark theme

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/sync/sync.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/sync/sync.component.scss
@@ -77,5 +77,5 @@ app-sync-progress {
 #sync-disabled-message,
 #sync-failure-support-message {
   max-width: 40rem;
-  color: variables.$lighterTextColor;
+  color: var(--sf-sync-last-attempt-unsuccessful-color);
 }
